@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2013-12-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/delegate.c (InvokePostscriptDelegate): Log return status.</li>
+<li>magick/nt_base.c (NTGhostscriptFonts): For Microsoft Windows,
+also search c:gsfonts for Ghostscript font files.</li>
+<li>coders/ept.c (ReadEPTImage): Fix crash observed when Ghostscript
+fails to produce output.</li>
+</ul>
+</blockquote>
 <p>2013-12-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
